--- a/src/directives/decorators/bootstrap-lindix/default.html
+++ b/src/directives/decorators/bootstrap-lindix/default.html
@@ -1,7 +1,7 @@
 <div class="form-group" ng-class="{'has-error': hasError(), 'has-success': hasSuccess(), 'has-feedback': form.feedback !== false }">
-  <label class="control-label col-md-4" for="{{form.key}}" >{{form.title}}</label>
+  <label class="control-label {{form.labelsize}}" for="{{form.key}}" >{{form.title}}</label>
 
-  <div class="col-md-8">
+  <div class="control-label {{form.inputsize}}">
     <input ng-show="form.key"
            id="{{form.key}}"
            type="{{form.type}}"
