--- a/src/directives/decorators/bootstrap-lindix/select.html
+++ b/src/directives/decorators/bootstrap-lindix/select.html
@@ -1,13 +1,16 @@
 <div class="form-group" ng-class="{'has-error': hasError(), 'has-success': hasSuccess(), 'has-feedback': form.feedback !== false}">
-  <label ng-show="showTitle()">
+  <label class="control-label {{form.labelsize}}" for="{{form.key}}">
     {{form.title}}
   </label>
-  <select ng-model="$$value$$"
-          sf-changed="form"
-          class="form-control"
-          schema-validate="form.schema"
-          ng-required="form.required"
-          ng-options="val as form.titleMap[val] for val in form.schema.enum">
-  </select>
-  <div class="help-block" ng-show="form.description" ng-bind-html="(hasError() && errorMessage(schemaError())) || form.description"></div>
+  <div class="{{form.inputsize}}">
+    <select ng-model="$$value$$"
+            sf-changed="form"
+            class="form-control"
+            schema-validate="form.schema"
+            ng-required="form.required"
+            ng-options="val as form.titleMap[val] for val in form.schema.enum">
+            id="{{form.key}}"
+    </select>
+    <div class="help-block" ng-show="form.description" ng-bind-html="(hasError() && errorMessage(schemaError())) || form.description"></div>
+  </div>
 </div>
