--- a/src/directives/decorators/bootstrap-lindix/textarea.html
+++ b/src/directives/decorators/bootstrap-lindix/textarea.html
@@ -1,14 +1,17 @@
 <div class="form-group has-feedback" ng-class="{'has-error': hasError(), 'has-success': hasSuccess()}">
-  <label ng-show="showTitle()">{{form.title}}</label>
-  <textarea class="form-control"
-            sf-changed="form"
-            ng-required="form.required"
-            ng-model="$$value$$"
-            schema-validate="form.schema"></textarea>
-  <!-- disabled until we unbreak the css
-    <span ng-if="form.feedback !== false"
-        class="form-control-feedback"
-        ng-class="evalInScope(form.feedback) || { 'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"></span>
-  -->
-  <span class="help-block">{{ (hasError() && errorMessage(schemaError())) || form.description}}</span>
+  <label class="control-label {{form.labelsize}}" for="{{form.key}}">{{form.title}}</label>
+  <div class="{{form.inputsize}}">
+    <textarea class="form-control"
+              sf-changed="form"
+              ng-required="form.required"
+              ng-model="$$value$$"
+              schema-validate="form.schema"
+              id="{{form.key}}"></textarea>
+    <!-- disabled until we unbreak the css
+      <span ng-if="form.feedback !== false"
+          class="form-control-feedback"
+          ng-class="evalInScope(form.feedback) || { 'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"></span>
+    -->
+    <span class="help-block">{{ (hasError() && errorMessage(schemaError())) || form.description}}</span>
+  </div>
 </div>
