--- a/src/directives/decorators/bootstrap-lindix/datepicker/datepicker.html
+++ b/src/directives/decorators/bootstrap-lindix/datepicker/datepicker.html
@@ -1,16 +1,19 @@
 <div class="form-group" ng-class="{'has-error': hasError()}">
-  <label ng-show="showTitle()">{{form.title}}</label>
+  <label class="control-label {{form.labelsize}}" for="{{form.key}}">{{form.title}}</label>
 
-  <input ng-show="form.key"
-         style="background-color: white"
-         type="date"
-         class="form-control"
-         ng-required="form.required"
-         schema-validate="form.schema"
-         ng-model="$$value$$"
-         pick-a-date
-         min-date="form.minDate"
-         max-date="form.maxDate" />
+  <div class="{{form.inputsize}}">
+    <input ng-show="form.key"
+           style="background-color: white"
+           type="date"
+           class="form-control"
+           ng-required="form.required"
+           schema-validate="form.schema"
+           ng-model="$$value$$"
+           pick-a-date
+           min-date="form.minDate"
+           max-date="form.maxDate"
+           id="{{form.key}}"/>
 
-  <span class="help-block">{{ (hasError() && errorMessage(schemaError())) || form.description}}</span>
+    <span class="help-block">{{ (hasError() && errorMessage(schemaError())) || form.description}}</span>
+  </div>
 </div>
